--- a/README.textile
+++ b/README.textile
@@ -2,7 +2,7 @@ h1. MGP Scrippet - Convert chunks of plain text into the standard screenplay for
 
 *Author*: "Matthew Pennell":http://www.thewatchmakerproject.com/ - Principal, "29digital":http://www.29digital.com/
 
-Original "Scrippets":http://scrippets.org/ function by "Nima Yousefi":http://equinox-of-insanity.com/, based upon the Scrippet concept and design by "John August":http://johnaugust.com/
+*Credits*: Original "Scrippets":http://scrippets.org/ function by "Nima Yousefi":http://equinox-of-insanity.com/, based upon the Scrippet concept and design by "John August":http://johnaugust.com/
 
 *GitHub Repository*: "http://github.com/matthewpennell/mgp.ee_scrippet.ee_addon/":http://github.com/matthewpennell/mgp.ee_scrippet.ee_addon/
 
